<resources>
    <string name="app_name">Animal Protector</string>
    <string name="my_pets">Animal Listing</string>
    <string name="name">Name</string>
    <string name="details">Animal Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_button_text">Add Animal</string>
    <string name="enter">Enter Animal To Protect</string>
    <string name="photo">photo of animal</string>
    <string name="phone">Phone Number</string>
    <string name="description">Description</string>

</resources>
